fix delete button css and wrapping bug

--- a/src/todolists/components/todoItem.css
+++ b/src/todolists/components/todoItem.css
@@ -1,9 +1,10 @@
 .todoItem {
   display: flex;
   align-items: baseline ;
-
-
+  min-height: 2em;
 }
+
+
 
 .spaceItemContent {
   flex-grow: 4 !important;
